# imnn

./: README.md  imnn_gaussian.ipynb  pyproject.toml
imnn/: __init__.py  _imnn.py  models.py  plots.py  train.py  utils.py
